[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/UserInterface/VolumeSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/UserInterface/Settings.gd" type="Script" id=2]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -229.5
margin_right = 375.0
margin_bottom = 229.5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 25.0
margin_right = -23.0
margin_bottom = -24.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 708.0
margin_bottom = 14.0
text = "Settings"
align = 1
valign = 1

[node name="MusicContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 708.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/MusicContainer"]
margin_top = 1.0
margin_right = 42.0
margin_bottom = 15.0
text = "Music:"

[node name="MusicSlider" parent="Panel/VBoxContainer/MusicContainer" instance=ExtResource( 1 )]
margin_left = 46.0
margin_right = 708.0
size_flags_horizontal = 3

[node name="SoundFXContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 38.0
margin_right = 708.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/SoundFXContainer"]
margin_top = 1.0
margin_right = 62.0
margin_bottom = 15.0
text = "Sound FX:"

[node name="SoundFxSlider" parent="Panel/VBoxContainer/SoundFXContainer" instance=ExtResource( 1 )]
margin_left = 66.0
margin_right = 708.0
size_flags_horizontal = 3

[connection signal="value_changed" from="Panel/VBoxContainer/MusicContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SoundFXContainer/SoundFxSlider" to="." method="_on_sound_fx_slider_value_changed"]
